add class for check for budget

--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
         <h2 class="topbar">Your Current Balance</h2>
         <label for="balance">Current Balance : <span>R0</span></label>
     </div> -->
+    <div class="wrapper">
+        <div class="container">
+            <!-- check test design -->
+            <div class="input-container flex-space">
+                <div>
+                    <p>Team-A Expense Tracker App </p>
+                </div>
+            </div>
+            <!-- end -->
+            <div class="sub-container">
+                <!-- Budget -->
+                <div class="total-amount-container">
+                    <h3>My Salary</h3>
+                    <p class="hide error" id="budget-error">
+                        Value cannot be blank
+                    </p>
+                    <input type="number" id="total-amount" placeholder="Enter Total Amount" />
+                    <button class="submit" id="total-amount-button">Set Budget</button>
+                </div>
+
 
     <script src="/main.js"></script>
 </body>
