--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <title>Expense Team A</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<!-- NavBar  -->
+    <!-- NavBar  -->
     <!-- <header class="navbar">
         <h1>Expense Tracker App</h1>
         <div class="profile">
@@ -40,8 +42,20 @@
                     <input type="number" id="total-amount" placeholder="Enter Total Amount" />
                     <button class="submit" id="total-amount-button">Set Budget</button>
                 </div>
+                <!-- Expenditure -->
+                <div class="user-amount-container">
+                    <h3>Expenses</h3>
+                    <p class="hide error" id="product-title-error">
+                        Values cannot be empty
+                    </p>
+                    <input type="text" class="product-title" id="product-title" placeholder="Enter Title of Product" />
+                    <input type="number" id="user-amount" placeholder="Enter Cost of Product" />
+                    <button class="submit" id="check-amount">Expense</button>
+                    <button class="submit-income" id="check-income">Income</button>
+                </div>
+            </div>
 
-
-    <script src="/main.js"></script>
+            <script src="/main.js"></script>
 </body>
+
 </html>
