--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--Remove html -->
     <!-- NavBar  -->
     <!-- <header class="navbar">
         <h1>Expense Tracker App</h1>
