i add transaction as exchange as expense in list

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <!-- List -->
         <div class="list">
-            <h3>Expense List</h3>
+            <h3>Transaction List</h3>
             <div class="list-container" id="list"></div>
         </div>
     </div>
