--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <p class="hide error" id="product-title-error">
                         Values cannot be empty
                     </p>
-                    <input type="text" class="product-title" id="product-title" placeholder="Enter Title of Product" />
-                    <input type="number" id="user-amount" placeholder="Enter Cost of Product" />
+                    <input type="text" class="product-title" id="product-title" placeholder="Enter Detail" />
+                    <input type="number" id="user-amount" placeholder="Enter Amount" />
                     <button class="submit" id="check-amount">Expense</button>
                     <button class="submit-income" id="check-income">Income</button>
                 </div>
