add change on title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Team A</title>
+    <title>Expense Tracker App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,13 +23,13 @@
             <div class="sub-container">
                 <!-- Expenditure -->
                 <div class="user-amount-container">
-                    
+                    .
                     <p class="hide error" id="product-title-error">
                         Values cannot be empty
                     </p>
                     <input type="text" class="product-title" id="product-title" placeholder="Enter Detail" />
                     <input type="number" id="user-amount" placeholder="Enter Amount" />
-                    <button class="submit" id="check-amount">Expense</button>
+                    <button class="submit" id="check-amount"> Expense</button>
                     <button class="submit-income" id="check-income">Income</button>
                     
                 </div>
@@ -49,8 +49,7 @@
                     <span id="balance-amount">0</span>
                 </div>
             </div>
-        </div>
-        <!-- List -->
+vv                                                                                                                                                                                                                                                                                                                                                                                               <!-- List -->
         <div class="list">
             <h3>Transaction List</h3>
             <div class="list-container" id="list"></div>
